[package]
name = "valida-alu-u32"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
itertools = "0.10.5"

p3-air = { path = "../../Plonky3/air" }
p3-baby-bear = { path = "../../Plonky3/baby-bear" }
p3-field = { path = "../../Plonky3/field" }
p3-matrix = { path = "../../Plonky3/matrix" }
p3-maybe-rayon = { path = "../../Plonky3/maybe-rayon" }
p3-uni-stark = { path = "../../Plonky3/uni-stark" }
valida-bus = { path = "../bus" }
valida-derive = { path = "../derive" }
valida-machine = { path = "../machine" }
valida-memory = { path = "../memory" }
valida-cpu = { path = "../cpu" }
valida-range = { path = "../range" }
valida-util = { path = "../util" }
valida-opcodes = { path = "../opcodes" }
