[package]
name = "valida-assembler"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "assembler"
path = "src/bin/assembler.rs"

[dependencies]
byteorder = "1.4.3"
clap = {version = "4.4.5", features = ["cargo"]}
pest = "2.7.3"
pest_derive = "2.7.3"
valida-opcodes = { path = "../opcodes" }

[build-dependencies]
pest_generator = "2.7.3"
pest_meta = "2.7.3"
