[package]
name = "valida-basic"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "valida"
path = "src/bin/valida.rs"

[[bin]]
name = "test_prover"
path = "src/bin/test_prover.rs"

[dependencies]
byteorder = "1.4.3"
ciborium = "0.2.2"
clap = { version = "4.3.19", features = ["derive"] }
tracing = "0.1.37"
valida-alu-u32 = { path = "../alu_u32" }
valida-assembler = { path = "../assembler" }
valida-bus = { path = "../bus" }
valida-cpu = { path = "../cpu" }
valida-derive = { path = "../derive" }
valida-machine = { path = "../machine" }
valida-memory = { path = "../memory" }
valida-opcodes = { path = "../opcodes" }
valida-output = { path = "../output" }
valida-program = { path = "../program" }
valida-range = { path = "../range" }
p3-baby-bear = { path = "../../Plonky3/baby-bear" }
p3-field = { path = "../../Plonky3/field" }
p3-maybe-rayon = { path = "../../Plonky3/maybe-rayon", features = ["parallel"] }
p3-util = { path = "../../Plonky3/util" }
p3-goldilocks = {path = "../../Plonky3/goldilocks" }
p3-uni-stark = {path = "../../Plonky3/uni-stark" }
p3-commit = { path = "../../Plonky3/commit" }
p3-air = { path = "../../Plonky3/air" }
p3-matrix = { path = "../../Plonky3/matrix" }
p3-challenger = { path = "../../Plonky3/challenger" }
p3-dft = { path = "../../Plonky3/dft" }
p3-fri = { path = "../../Plonky3/fri" }
p3-keccak = { path = "../../Plonky3/keccak" }
p3-mds = { path = "../../Plonky3/mds" }
p3-merkle-tree = { path = "../../Plonky3/merkle-tree" }
p3-poseidon = { path = "../../Plonky3/poseidon" }
p3-symmetric = { path = "../../Plonky3/symmetric" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = {}
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
