[package]
name = "valida-basic"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "valida"
path = "src/bin/valida.rs"

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.3.19", features = ["derive"] }
tracing = "0.1.37"
valida-alu-u32 = { path = "../alu_u32" }
valida-assembler = { path = "../assembler" }
valida-bus = { path = "../bus" }
valida-cpu = { path = "../cpu" }
valida-derive = { path = "../derive" }
valida-machine = { path = "../machine" }
valida-memory = { path = "../memory" }
valida-opcodes = { path = "../opcodes" }
valida-output = { path = "../output" }
valida-program = { path = "../program" }
valida-range = { path = "../range" }
p3-baby-bear = { workspace = true }
p3-field = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-util = { workspace = true }
p3-goldilocks = { workspace = true }
p3-uni-stark = { workspace = true }
p3-commit = { workspace = true }
p3-air = { workspace = true }
p3-matrix = { workspace = true }

[dev-dependencies]
ciborium = "0.2.2"
rand = "0.8.5"
p3-challenger = { workspace = true }
p3-dft = { workspace = true }
p3-field = { workspace = true }
p3-fri = { workspace = true }
p3-keccak = { workspace = true }
p3-mds = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon = { workspace = true }
p3-symmetric = { workspace = true }
