[package]
name = "valida-machine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "1.4.3"
itertools = "0.10.3"

p3-air = { path = "../../Plonky3/air" }
p3-baby-bear = { path = "../../Plonky3/baby-bear" }
p3-commit = { path = "../../Plonky3/commit" }
p3-challenger = { path = "../../Plonky3/challenger" }
p3-dft = { path = "../../Plonky3/dft" }
p3-field = { path = "../../Plonky3/field" }
p3-matrix = { path = "../../Plonky3/matrix" }
p3-maybe-rayon = { path = "../../Plonky3/maybe-rayon" }

valida-util = { path = "../util" }

