[package]
name = "valida-machine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []

[dependencies]
byteorder = "1.4.3"
itertools = "0.10.3"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
tracing = "0.1.37"

p3-air = { path = "../../Plonky3/air" }
p3-baby-bear = { path = "../../Plonky3/baby-bear" }
p3-commit = { path = "../../Plonky3/commit" }
p3-challenger = { path = "../../Plonky3/challenger" }
p3-dft = { path = "../../Plonky3/dft" }
p3-field = { path = "../../Plonky3/field" }
p3-matrix = { path = "../../Plonky3/matrix" }
p3-maybe-rayon = { path = "../../Plonky3/maybe-rayon" }
p3-uni-stark = { path = "../../Plonky3/uni-stark" }
p3-util = { path = "../../Plonky3/util" }
valida-util = { path = "../util" }
