[package]
name = "valida-machine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []

[dependencies]
byteorder = "1.4.3"
itertools = "0.12.0"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
tracing = "0.1.37"

valida-opcodes = { path = "../opcodes" }

p3-air = { workspace = true }
p3-baby-bear = { workspace = true }
p3-commit = { workspace = true }
p3-challenger = { workspace = true }
p3-dft = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-uni-stark = { workspace = true }
p3-util = { workspace = true }
valida-util = { path = "../util" }
