[package]
name = "valida-memory"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-air = { path = "../../Plonky3/air" }
p3-field = { path = "../../Plonky3/field" }
p3-mersenne-31 = { path = "../../Plonky3/mersenne-31" }
p3-matrix = { path = "../../Plonky3/matrix" }

valida-machine = { path = "../machine" }
valida-util = { path = "../util" }
