[package]
name = "valida-poseidon2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
itertools = "0.10.5"

p3-air = { path = "../../Plonky3/air" }
p3-field = { path = "../../Plonky3/field" }
p3-matrix = { path = "../../Plonky3/matrix" }
p3-mersenne-31 = { path = "../../Plonky3/mersenne-31" }
p3-maybe-rayon = { path = "../../Plonky3/maybe-rayon" }

valida-bus = { path = "../bus" }
valida-derive = { path = "../derive" }
valida-machine = { path = "../machine" }
valida-memory = { path = "../memory" }
valida-cpu = { path = "../cpu" }
valida-util = { path = "../util" }
