[package]
name = "valida-program"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-uni-stark = { workspace = true }
valida-bus = { path = "../bus" }
valida-derive = { path = "../derive" }
valida-machine = { path = "../machine" }
valida-util = { path = "../util" }
