[package]
name = "valida-range"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-air = { path = "../../Plonky3/air" }
p3-baby-bear = { path = "../../Plonky3/baby-bear" }
p3-field = { path = "../../Plonky3/field" }
p3-matrix = { path = "../../Plonky3/matrix" }
p3-maybe-rayon = { path = "../../Plonky3/maybe-rayon" }

valida-machine = { path = "../machine" }
