[package]
name = "valida-runner"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-air = { path = "../../Plonky3/air" }
p3-commit = { path = "../../Plonky3/commit" }
p3-field = { path = "../../Plonky3/field" }
p3-matrix = { path = "../../Plonky3/matrix" }

valida-cpu = { path = "../cpu" }
valida-memory = { path = "../memory" }
valida-machine = { path = "../machine" }
